hphp/hack/test/typecheck/meth_caller/meth_caller_internal.php.exp
File "meth_caller_internal.php", line 3, characters 8-8:
Unbound name: `A` (a module) (Naming[2049])
File "meth_caller_internal.php", line 9, characters 32-36:
You cannot access this method with `meth_caller` (even from the same module) (Typing[4481])
  File "meth_caller_internal.php", line 6, characters 21-23:
  It is declared as `internal` here
